--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Etch-a-Sketch</title>
     <link rel = "stylesheet" href = "style.css">
     <script src = "script.js" defer> </script>
+    <link rel="icon" href ="OPEtch-a-Sktech\sobmutsuki.png">
 </head>
 <body>
     <header> 
@@ -46,8 +47,9 @@
 
     </div>
 
-    <footer>
-        MakotoMachiYuki
-    </footer>
+    <footer class = "footer">
+        <p> 
+            Copyright © MakotoMachiYuki
+        </p>
 </body>
 </html>
