--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Etch-a-Sketch</title>
     <link rel = "stylesheet" href = "style.css">
     <script src = "script.js" defer> </script>
-    <link rel="icon" href ="OPEtch-a-Sktech\sobmutsuki.png">
+    <link rel="icon" href ="https://github.com/MakotoMachiYuki/OPEtch-a-Sktech/blob/b6c33dcdc6dea85c4627fd8c38ddd5a3fcac92c3/sobmutsuki.png">
 </head>
 <body>
     <header> 
